force-app/main/default/objects/Relationship__c/Relationship__c.object-meta.xml
<CustomObject>
    <label>Relationship</label>
    <nameField>
        <label>Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationships</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>