force-app/main/default/objects/Relationship__c/fields/Primary_Relationship_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Primary_Relationship_Advisor__c</fullName>
    <formula>Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Relationship Advisor</label>
    <type>Text</type>
</CustomField>