force-app/main/default/objects/Relationship__c/fields/Primary_Relationship_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Relationship_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Relationship Contact</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Relationships</relationshipLabel>
    <relationshipName>Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>