force-app/main/default/objects/Relationship__c/fields/Relationship_Number__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Number__c</fullName>
    <displayFormat>R-{000000}</displayFormat>
    <externalId>true</externalId>
    <label>Relationship Number</label>
    <type>AutoNumber</type>
</CustomField>